--- a/templates/modelo.html
+++ b/templates/modelo.html
@@ -29,9 +29,9 @@
                         Cursos
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/glossario">Listar Termos</a></li>
+                        <li><a class="dropdown-item" href="/cursos">Cursos disponíveis</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="/novo_termo">Novo Termo</a></li>
+                        <li><a class="dropdown-item" href="/novo_curso">Cadastrar novo Curso</a></li>
                     </ul>
                 </li>
             </ul>
