--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -1,24 +1,24 @@
 {% extends "modelo.html" %}
 {% block conteudo %}
-<h1>Glossário</h1>
+<h1>Cursos Disponíveis</h1>
 
 <table class="table table-striped table-responsive table-bordered">
   <thead class="thead-default">
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Termo</th>
+      <th scope="col">Curso</th>
       <th scope="col">Definição</th>
       <th scope="col">Ação</th>
     </tr>
   </thead>
   <tbody>
-  {% for termo in glossario %}
+  {% for termo in curso %}
     <tr>
       <th scope="row">{{ loop.index }}</th>
-      <td>{{ termo[0] }}</td>
-      <td>{{ termo[1] }}</td>
+      <td>{{ curso[0] }}</td>
+      <td>{{ curso[1] }}</td>
       <td>
-        <form method="post" action="{{ url_for('excluir_termo', termo_id=loop.index-1) }}">
+        <form method="post" action="{{ url_for('excluir_cursos', termo_id=loop.index-1) }}">
         <button type="submit" class="btn btn-danger">Excluir</button>
         </form>
       </td>
