--- a/templates/adicionar_curso.html
+++ b/templates/adicionar_curso.html
@@ -1,18 +1,19 @@
 {% extends "modelo.html" %}
-{% block conteudo %}
-<h1>Cadastrar Novo Curso</h1>
 
-<form action="{{ url_for('criar_curso')}}" method="post">
+{% block conteudo %}
+<h1>Adicionar Curso/Disciplina</h1>
+
+<form action="{{ url_for('criar_curso') }}" method="post">
   <div class="mb-3">
-    <label for="curso" class="form-label">Nome do Curso</label>
-    <input  class="form-control" id="curso" name="curso" aria-describedby="emailHelp">
-    <div id="termoHelp" class="form-text">Para adicionar nome do curso.</div>
+    <label for="curso" class="form-label">Curso/Disciplina</label>
+    <input type="text" class="form-control" id="curso" name="curso" aria-describedby="termoHelp">
+    <div id="termoHelp" class="form-text">Curso para ser adicionado.</div>
   </div>
   <div class="mb-3">
-    <label for="definicao" class="form-label">Definição</label>
+    <label for="definicao" class="form-label">Descrição</label>
     <textarea class="form-control" id="definicao" name="definicao" rows="3"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary">Cadastrar</button>
+  <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
 
 {% endblock %}
