--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -1,25 +1,27 @@
 {% extends "modelo.html" %}
 
 {% block conteudo %}
-<h1>Cursos/Disciplinas</h1>
+<h1>Agenda de Eventos/Aulas</h1>
 
 <table class="table table-striped table-responsive table-bordered">
   <thead class="thead-default">
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Nome</th>
+      <th scope="col">Data</th>
       <th scope="col">Descrição</th>
+      <th scope="col">Tipo</th>
       <th scope="col">Ação</th>
     </tr>
   </thead>
   <tbody>
-  {% for termo in listar_curso %}
+  {% for evento in eventos %}
     <tr>
       <th scope="row">{{ loop.index }}</th>
-      <td>{{ termo[0] }}</td>
-      <td>{{ termo[1] }}</td>
+      <td>{{ evento[0] }}</td>
+      <td>{{ evento[1] }}</td>
+      <td>{{ evento[2] }}</td>
       <td>
-        <form method="post" action="{{ url_for('excluir_cursos', curso_id=loop.index0) }}">
+        <form method="post" action="{{ url_for('excluir_evento', evento_id=loop.index0) }}">
           <button type="submit" class="btn btn-danger">Excluir</button>
         </form>
       </td>
