--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "modelo.html" %}
 {% block conteudo %}
     <div class="d-flex justify-content-center align-items-center pt-3">
-    <h1>O melhor software educacional do UNIESP</h1>
-    <img src="../static/home.jpg" class="card-img-top" alt="Descrição da imagem" style="width: 500px; ">
+        <h1>Software Educacional</h1><br>
+        <img src="../static/chapeu.png" alt="Descrição" style="width: 200px; height: auto;">
     </div>
 {% endblock %}
