--- a/templates/modelo.html
+++ b/templates/modelo.html
@@ -2,11 +2,16 @@
 <html lang="pt-BR" data-bs-theme="white">
 <head>
     <meta charset="utf-8">
-    <!--    Verificar como colocar FavIcon no Flask -->
     <link href="https://cdn-icons-png.flaticon.com/128/972/972623.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Educational System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='icone.png') }}">
+    <style>
+        body{
+            background-color: #D3D3D3;
+        }
+    </style>
 </head>
 <body>
 
@@ -26,6 +31,15 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Agenda e Eventos
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/agenda">Agenda de Eventos/Aulas</a></li>
+                        <li><a class="dropdown-item" href="/novo_evento">Adicionar Evento/Aula</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Cursos
                     </a>
                     <ul class="dropdown-menu">
@@ -39,7 +53,6 @@
     </div>
 </nav>
 <div class="container">
-    <!-- Content here -->
     {% block conteudo %}
     {% endblock %}
 </div>
